@@ -150,6 +150,20 @@ TODO
 
 Tasks are actually allowed to change the size of data interfaces.
 
+The simplest case is just changing the amount of data actually used within the
+allocated buffer. This is for instance implemented for the matrix interface: one
+can set the new NX/NY values with STARPU_MATRIX_SET_NX() and STARPU_MATRIX_SET_NY()
+at the end of the task implementation. Data transfers achieved by StarPU will
+then use these values instead of the whole allocated size. The values of course
+need to be set within the original allocation. To reserve room for increasing
+the NX/NY values, one can use starpu_matrix_data_register_allocsize() instead of
+starpu_matrix_data_register(), to specify the allocation size to be used instead
+of the default NX*NY*ELEMSIZE. To support this, the data interface
+has to implement the starpu_data_interface_ops::alloc_footprint and
+starpu_data_interface_ops::alloc_compare methods, for proper StarPU allocation
+management.
+
+A more involved case is changing the amount of allocated data.
 The task implementation can just reallocate the buffer during its execution, and
 set the proper new values in the interface structure, e.g. nx, ny, ld, etc. so
 that the StarPU core knows the new data layout. The starpu_data_interface_ops
